<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<!-- The MAVEN pom file for the OWL API. -->


	<!-- The OWL API libraries are hosted on the Sonatype OSS repository. We 
		therfore need to refer to org.sonatype.oss.oss-parent as the parent project. -->
	<parent>
		<groupId>org.sonatype.oss</groupId>
		<artifactId>oss-parent</artifactId>
		<version>7</version>
	</parent>

	<groupId>com.github.ansell.owlapi</groupId>
	<artifactId>owlapi-parent</artifactId>
	<packaging>pom</packaging>
	<version>3.4.11.1-ansell-SNAPSHOT</version>
	<name>OWLAPI</name>
	<description>The OWL API is a Java API and reference implementation for creating, manipulating and serialising OWL Ontologies. The latest version of the API is focused towards OWL 2</description>
	<url>https://github.com/ansell/owlapi</url>

	<modules>
		<module>api</module>
		<module>impl</module>
		<module>tools</module>
		<module>parsers</module>
		<module>oboformat</module>
		<module>apibinding</module>
		<module>contract</module>
		<module>rio</module>

		<!-- The distribution module is a single-jar build of the whole OWL API. -->
		<module>distribution</module>
	</modules>


	<issueManagement>
		<system>sourceforge</system>
		<url>http://sourceforge.net/tracker/?group_id=90989</url>
	</issueManagement>


	<licenses>
		<license>
			<name>Apache License Version 2.0, January 2004</name>
			<url>http://www.apache.org/licenses/</url>
			<distribution>repo</distribution>
		</license>
		<license>
			<name>GNU LGPL Version 3.0</name>
			<url>http://www.gnu.org/licenses/lgpl.txt</url>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>junit</groupId>
				<artifactId>junit</artifactId>
				<version>4.11</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.mockito</groupId>
				<artifactId>mockito-all</artifactId>
				<version>1.9.5</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>com.github.ansell.abstract-service-loader</groupId>
				<artifactId>abstract-service-loader</artifactId>
				<version>0.4</version>
			</dependency>
			<dependency>
				<groupId>org.openrdf.sesame</groupId>
				<artifactId>sesame-model</artifactId>
				<version>${sesame.version}</version>
			</dependency>
			<dependency>
				<groupId>org.openrdf.sesame</groupId>
				<artifactId>sesame-rio-api</artifactId>
				<version>${sesame.version}</version>
			</dependency>
			<dependency>
				<groupId>org.openrdf.sesame</groupId>
				<artifactId>sesame-repository-api</artifactId>
				<version>${sesame.version}</version>
			</dependency>
			<dependency>
				<groupId>org.openrdf.sesame</groupId>
				<artifactId>sesame-rio-ntriples</artifactId>
				<version>${sesame.version}</version>
			</dependency>
			<dependency>
				<groupId>org.openrdf.sesame</groupId>
				<artifactId>sesame-rio-turtle</artifactId>
				<version>${sesame.version}</version>
			</dependency>
			<dependency>
				<groupId>org.openrdf.sesame</groupId>
				<artifactId>sesame-rio-n3</artifactId>
				<version>${sesame.version}</version>
			</dependency>
			<dependency>
				<groupId>org.openrdf.sesame</groupId>
				<artifactId>sesame-rio-trig</artifactId>
				<version>${sesame.version}</version>
			</dependency>
			<dependency>
				<groupId>org.openrdf.sesame</groupId>
				<artifactId>sesame-rio-trix</artifactId>
				<version>${sesame.version}</version>
			</dependency>
			<dependency>
				<groupId>org.openrdf.sesame</groupId>
				<artifactId>sesame-rio-rdfjson</artifactId>
				<version>${sesame.version}</version>
			</dependency>
			<dependency>
				<groupId>org.openrdf.sesame</groupId>
				<artifactId>sesame-rio-rdfxml</artifactId>
				<version>${sesame.version}</version>
			</dependency>
			<dependency>
				<groupId>org.openrdf.sesame</groupId>
				<artifactId>sesame-rio-binary</artifactId>
				<version>${sesame.version}</version>
			</dependency>
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-api</artifactId>
				<version>${slf4j.version}</version>
			</dependency>
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-log4j12</artifactId>
				<version>${slf4j.version}</version>
				<scope>test</scope>
			</dependency>
			<!-- Sets up the META-INF/services/ files automatically at compile time. optional so it is not a transitive dependency -->
			<dependency>
				<groupId>org.kohsuke.metainf-services</groupId>
				<artifactId>metainf-services</artifactId>
				<version>1.5</version>
				<scope>compile</scope>
				<optional>true</optional>
			</dependency>
			<dependency>
				<groupId>commons-io</groupId>
				<artifactId>commons-io</artifactId>
				<version>2.4</version>
				<scope>test</scope>
			</dependency>   
		</dependencies>
	</dependencyManagement>

	<developers>
		<developer>
			<id>ignazio1977</id>
			<name>Ignazio Palmisano</name>
			<email>ignazio1977@users.sourceforge.net</email>
		</developer>
		<developer>
			<id>ansell</id>
			<name>Peter Ansell</name>
			<email>p_ansell@yahoo.com</email>
		</developer>
	</developers>

	<prerequisites>
		<maven>2.2.1</maven>
	</prerequisites>

	<mailingLists>
		<mailingList>
			<name>OWLAPI Development Mailing list</name>
			<subscribe>https://lists.sourceforge.net/lists/listinfo/owlapi-developert</subscribe>
			<unsubscribe>https://lists.sourceforge.net/lists/listinfo/owlapi-developer</unsubscribe>
			<archive>http://sourceforge.net/mailarchive/forum.php?forum_name=owlapi-developer</archive>
			<post>owlapi-developer@lists.sourceforge.net</post>
		</mailingList>
	</mailingLists>



	<organization>
		<name>CSIRO HRPPC</name>
		<url>http://www.plantphenomics.org/hrppc</url>
	</organization>

	<profiles>

		<profile>
			<id>release-sign-artifacts</id>
			<activation>
				<activeByDefault>false</activeByDefault>
				<property>
					<name>performRelease</name>
					<value>true</value>
				</property>
			</activation>
			<build>
				<plugins>
					<!-- We need the GPG Plugin to self-sign the jar files. A valid signature 
						for the jar files is a requirement for deploying to Maven Central. -->
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-gpg-plugin</artifactId>
						<version>1.4</version>
						<executions>
							<execution>
								<id>sign-artifacts</id>
								<phase>verify</phase>
								<goals>
									<goal>sign</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

	<build>
		<pluginManagement>
			<plugins>
	
				<!-- In the Compiler Plugin we specify the encoding and the compiler version. -->
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.1</version>
					<configuration>
						<source>1.7</source>
						<target>1.7</target>
						<encoding>UTF-8</encoding>
					</configuration>
				</plugin>
	
				<!-- We need to configure the Source Plugin for deploying the sources. -->
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-source-plugin</artifactId>
					<version>2.2.1</version>
					<executions>
						<!-- Attach sources. -->
						<execution>
							<id>attach-sources</id>
							<goals>
								<goal>jar</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
	
				<!-- We need to configure the Javadoc Plugin for deploying the Javadocs -->
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-javadoc-plugin</artifactId>
					<version>2.9.1</version>
					<executions>
						<execution>
							<id>attach-javadocs</id>
							<goals>
								<goal>jar</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
	
				<!-- The Assembly Plugin allows providing an additional single-jar build. -->
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-assembly-plugin</artifactId>
					<version>2.4</version>
					<configuration>
						<descriptors>
							<!-- <descriptor>owlapi-bin.xml</descriptor> -->
							<descriptor>distribution/src/assembly/bin.xml</descriptor>
						</descriptors>
					</configuration>
				</plugin>
	
				<!-- The Surefire Plugin is for error reporting. -->
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>2.16</version>
					<configuration>
						<forkCount>2</forkCount>
						<reuseForks>true</reuseForks>
						<argLine>-Xmx1024M -XX:MaxPermSize=512M</argLine>
					</configuration>
				</plugin>
	
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-clean-plugin</artifactId>
					<version>2.5</version>
				</plugin>

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-deploy-plugin</artifactId>
					<version>2.7</version>
				</plugin>

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-resources-plugin</artifactId>
					<version>2.6</version>
				</plugin>

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-install-plugin</artifactId>
					<version>2.4</version>
				</plugin>

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-jar-plugin</artifactId>
					<version>2.4</version>
				</plugin>

				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>versions-maven-plugin</artifactId>
					<version>2.1</version>
				</plugin>

			</plugins>
		</pluginManagement>
	</build>

	<!-- Specify the encoding of the source files. -->
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<sesame.version>2.7.10</sesame.version>
		<slf4j.version>1.7.5</slf4j.version>
	</properties>

	<!-- Parameters for the Source Code Management system. -->
	<scm>
		<connection>scm:git:git://github.com/ansell/owlapi.git</connection>
		<developerConnection>scm:git:git@github.com:ansell/owlapi.git</developerConnection>
		<url>https://github.com/ansell/owlapi</url>
	</scm>

</project>
